13-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin_backend/mongodb_views.py:
 * clarin_backend/utils.py:
 * docker/docker-compose.yml: Fixes for docker/podman.

05-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/DjangoClarin/settings.py:
 * backend-django/clarin_backend/urls.py:
 * backend-django/clarin_backend/views.py:
 * clarin-angular/src/app/components/views/login/login.component.html:
 * clarin-angular/src/app/components/views/login/login.component.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/login.service.ts:
 Added check whether to include the social login buttons in the user login
 view.

04-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * build_all.sh:
 * docker/.dockerignore:
 * docker/conf/requirements.txt:
 * docker/conf/AnnotationsSpecifications.xml:
 * docker/Dockerfile:
 * docker/env-dist:
 * docker/image_build.sh:
 * docker/start.sh: Various updates to the docker image build process.

12-December-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.3.2. (Export Annotations
 in Document Inspection).

 * clarin-angular/src/app/models/span.ts: Added SpanType enum.

 * clarin-angular/src/app/components/controls/text-widget-isolated/text-widget-isolated.component.html:
 Updated component to match text-widget.

 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.ts:
 Export Annotations in Excel/CSV/JSON/TXT added, sorting of table columns.

 * clarin-angular/src/app/helpers/annotation.ts: Added helper function
 annotationSortingDataAccessor(), for sorting tables with Annotations.

 * clarin-angular/src/app/app.module.ts: