@@ -1,3 +1,8 @@
+16-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/helpers/constants.ts:
+ * clarin-angular/src/assets/data/menu.json:
+ * clarin-angular/src/proxy-local.conf.json: Fixes for docker/podman.
+
 13-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
  * clarin_backend/mongodb_views.py:
  * clarin_backend/utils.py:
